# go-playground

./: .bazelrc  .gitignore  .golangci.yml  .pre-commit-config.yaml  BUILD.bazel  LICENSE  MODULE.bazel  README.md  Taskfile.yml  go.mod  go.work
.github/: dependabot.yml  kics.yml  yamllint.yml
.github/workflows/: check-github-actions.yml  check-golang.yml  check-others.yml  check-security.yml  commitlint.yml  kics.yml  test-pr.yml
bazel/: BUILD.bazel  go_test.bzl
hello-world/: BUILD.bazel  go.mod  main.go  main_test.go
httpcacheclient/: BUILD.bazel  client.go  client_test.go  go.mod  main.go
httpcacheserver/: BUILD.bazel  go.mod  handler.go  handler_test.go  main.go
singleflight/: BUILD.bazel  README.md  fetcher.go  go.mod  main.go  main_test.go
