load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "hello-world_lib",
    srcs = ["main.go"],
    importpath = "github.com/mocoarow/go-playground/hello-world",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hello-world",
    embed = [":hello-world_lib"],
    visibility = ["//visibility:public"],
)

smart_go_test(
    name = "hello-world_test",
    srcs = ["main_test.go"],
)
