load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "httpcacheclient_lib",
    srcs = [
        "client.go",
        "main.go",
    ],
    importpath = "github.com/mocoarow/go-playground/httpcacheclient",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "httpcacheclient",
    embed = [":httpcacheclient_lib"],
    visibility = ["//visibility:public"],
)

smart_go_test(
    name = "httpcacheclient_test",
    srcs = ["client_test.go"],
    deps = [":httpcacheclient_lib"],
)
