load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel:go_test.bzl", "smart_go_test")

go_library(
    name = "httpcacheserver_lib",
    srcs = [
        "handler.go",
        "main.go",
    ],
    importpath = "github.com/mocoarow/go-playground/httpcacheserver",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "httpcacheserver",
    embed = [":httpcacheserver_lib"],
    visibility = ["//visibility:public"],
)

smart_go_test(
    name = "httpcacheserver_test",
    srcs = ["handler_test.go"],
    deps = [":httpcacheserver_lib"],
)
